<resources>
    <string name="app_name">Computer Science</string>

    <string name="roll_no">Roll No</string>

    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>

    <string name="cancel">Cancel</string>
    <string name="sign_up">Not a Member yet? Signup here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="teacher">Teacher</string>
    <string name="select_account">Select Account:</string>
    <string name="student_account">Student Account</string>

    <string name="confrim_password">Confrim Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_name">Student Name</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chairman">Chairman</string>
    <string name="menu_faculty">Faculty</string>
    <string name="menu_result">Result</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_about">About</string>
    <string name="forget_password">Forget Password?</string>

    <string name="back">Back</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_reset">Email</string>
    <string name="dr_muhammad_saleem_vighio">Dr. Muhammad Saleem Vighio</string>
    <string name="chairman_of_computer_science">Chairman of Computer Science</string>
    <string name="quest_university_nawabshah">QUEST University Nawabshah</string>
    <string name="email_saleemvighio_quest_edu_pk">Email: Saleemvighio@quest.edu.pk</string>

    <string name="computer_science">Computer Science</string>
    <string name="admin">Admin</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="year">Year</string>
    <string name="batch">Batch</string>
    <string name="semester">Semester:</string>
    <string name="surname">Surname:</string>
    <string name="department">Department:</string>
    <string name="wellcome">Wellcome</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="_19_bscs">19 BSCS</string>
    <string name="f_18_bscs">F-18 BSCS</string>
    <string name="_18_bscs">18 BSCS</string>
    <string name="_17_bscs">17 BSCS</string>
    <string name="update">Update</string>
    <string name="savedbutton">Saved</string>
    <string name="delete_account">Delete Account</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="teaching_scale">Teaching Scale</string>


    <string name="scale">Scale</string>
    <string name="qualification">Qualification</string>
    <string name="capture_image">Capture Image</string>
    <string name="other_activities">Other Activities</string>
    <string name="batch_19_bscs">Batch: 19 BSCS</string>
    <string name="batch_18_bscs">Batch: 18 BSCS</string>
    <string name="add_time_table_for_17_batch">Add Time Table For 17 Batch</string>
    <string name="add_time_table">Add Time Table</string>
    <string name="add_result">Add Result</string>
    <string name="year_result">Year:</string>
    <string name="batch_result">Batch:</string>
    <string name="other_information">Other Information</string>
    <string name="some_write_about_taken_picture">Some write about taken picture</string>
    <string name="others">Others</string>

</resources>
