<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".AddFacultyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teacher_name"
            android:padding="8dp"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teaching_scale"
            android:padding="8dp"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="8dp"
            android:layout_gravity="center" />
        <EditText
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qualification"
            android:padding="8dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"/>
    </LinearLayout>

</LinearLayout>