<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:id="@+id/teacherid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teaching_scale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/scale" />
        <TextView
            android:id="@+id/teach_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/email" />
        <TextView
            android:id="@+id/teach_qualification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/qualification" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/saleem"
        android:layout_weight="1"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"

        >

    </de.hdodenhof.circleimageview.CircleImageView>
</LinearLayout>
</androidx.cardview.widget.CardView>