<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top"
    tools:context=".AddOtherActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:minHeight="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_information"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:srcCompat="@android:color/holo_blue_bright"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/some_write_about_taken_picture" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savedbutton" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>