<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/light"
    tools:context=".AddResultActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:minHeight="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_result"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/adminbg"
        tools:layout_editor_absoluteY="16dp" />



    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/semester"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="427dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/year"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="476dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:hint="@string/batch"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="579dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/savedbutton"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="624dp" />
</LinearLayout>