<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg"
    android:orientation="vertical"
    android:layout_gravity="center"

    android:gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/log"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:src="@mipmap/bcs" />
<androidx.cardview.widget.CardView
    android:layout_width="330dp"
    android:layout_height="40dp"
    android:layout_marginBottom="20dp"
    android:layout_gravity="center"

    >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email"
                >
                <EditText
                    android:id="@+id/emailaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="282dp" />
            </com.google.android.material.textfield.TextInputLayout>
</androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_gravity="center"
                android:hint="@string/password">
                <EditText
                    android:id="@+id/Passtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="282dp" />
            </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/resettext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="140dp"
                    />
                <TextView
                    android:id="@+id/admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:text="@string/admin"

                    android:textColor="@color/white"
                    />
            </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginTop="20dp"
    >
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonLogin"
                android:layout_width="170dp"
                android:layout_height="47dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#A0BA"
                android:layout_gravity="center"

                android:layout_marginRight="10dp"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    />
            </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
       android:id="@+id/cancel"
        android:onClick="Cancel"
        android:layout_width="170dp"
        android:layout_height="47dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#A0BA"
        android:layout_gravity="center"

        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            />
    </androidx.cardview.widget.CardView>
</LinearLayout>
            <TextView
                android:id="@+id/signupbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>