<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_login_bg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/email"
                >
                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_gravity="center"
                android:hint="@string/password">
                <EditText
                  android:id="@+id/Passwordnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="282dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:hint="@string/confrim_password">
                <EditText
                    android:id="@+id/ConPasswordnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                   />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_marginTop="30dp"
     >


        <androidx.cardview.widget.CardView
            android:id="@+id/regis"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/light"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sign_up_button"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
         android:id="@+id/exitbutton"
         android:layout_width="150dp"
         android:layout_height="40dp"
         app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/light"
         android:layout_gravity="center"

         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
             android:text="@string/cancel"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold"
             />
     </androidx.cardview.widget.CardView>
 </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>